updated carousel overflow issue

--- a/assets/stylesheets/components/acf/_benefits-carousel.scss
+++ b/assets/stylesheets/components/acf/_benefits-carousel.scss
@@ -1,8 +1,9 @@
 .benefits-carousel {
   .item {
-    min-height:340px;
+    min-height:350px;
     position:relative;
     width:100%;
+    height:100%;
     h6 {
       font-size:1.2rem;
       color:$medium-gray;
@@ -15,10 +16,12 @@
   }
   text-align:center;
   img {
-    max-width:320px;
+    max-height:300px;
+    width:auto;
     display:block;
     margin:0 auto;
     clear:both;
+    padding-bottom:20px;
   }
   .flash {
     font-family:$passion;
